fixed scrollbar

--- a/flexstyle.css
+++ b/flexstyle.css
@@ -1,3 +1,6 @@
+body{
+    overflow: hidden;
+}
 .container div{
     
     display: flex;
@@ -41,7 +44,7 @@
     
 }
 .container{
-  
+   
     display: grid;
     grid-template-areas:
         "header   header   header"
@@ -49,8 +52,8 @@
         "sidebar content2 content3"
        
         "footer footer     footer"; 
-    grid-template-columns: 100px 200px 200px;
-    grid-template-rows: 100px 150px 150px 100px;
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-rows: 100px 200px 200px 100px;
     text-align: center;
     align-content: center;
     justify-content: center;
